# lostbobo

./: .aimodelrules  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .requirements.lock.tmp  .ruff.toml  .vercelignore  AI_DIRECTIVES.md  ALPHA_PILOT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE_AUDIT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.a40  Dockerfile.api  Dockerfile.autoscaler  Dockerfile.unified  Dockerfile.worker  GEMINI.md  GUIDE.md  INFISICAL_SECRETS_TEMPLATE.md  LOG.md  MISSION_CONTROL_STRATEGY.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SYSTEM.md  api.py  completed.md  docker-compose.yml  github-safe-push.md  index.html  nginx.conf  package-lock.json  package.json  (+18 more)
backend/: Dockerfile  ci.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: research_director.py
backend/app/: __init__.py  gateway.py  main.py
backend/app/api/: api_router.py  auth.py  compiler_api.py  core_graph.py  dag.py  graph_query.py  graph_viz.py  lineage.py  main.py  ml.py  observability.py  rag.py  s3_storage.py  sla_monitor.py  swarm.py  worker_api.py
backend/app/core/: config.py  supabase.py
backend/app/services/: mercury.py  onboarding_service.py  pdf_service.py
backend/autoscaler/: engine.py  policy.py  predictor.py  scaler_engine.py
backend/compiler/runtime/: loader.py
backend/core/: health.py  runtime_manifest.py  tenant.py
backend/core/agents/: rag_agent.py  reasoning_agent.py  simulation_agent.py
backend/core/auth/: models.py  policy_engine.py
backend/core/certificate/: service.py
backend/core/dag/: edge.py  executor.py  graph.py  incremental.py  lineage.py  models.py  node.py  replay.py  runtime.py  scheduler.py  serializer.py
backend/core/embedding/: service.py
backend/core/evaluation/: ab_test.py
backend/core/execution/: models.py  queue.py  runpod_client.py  simulation_executor.py  streaming.py
backend/core/gateway/: gateway.py
backend/core/governance/: config.py  health.py  metrics.py  service.py  simulation_worker.py
backend/core/hardware/: __init__.py  bin_packing.py  economics.py  fractional.py  isolation.py  mps.py  pools.py
backend/core/kernel/: command_bus.py  kernel.py  middleware.py  world_brain.py
backend/core/memory/: reconciliation.py  schema.py  service.py
backend/core/middleware/: enforcement.py  llm_cost_gate.py  rate_limiter.py
backend/core/orchestrator/: beam_orchestrator.py
backend/core/plugins/: base.py  capabilities.py  manifests.py  permissions.py
backend/core/probability/: prediction.py
backend/core/provenance/: graph.py
backend/core/runtime/: execution_runtime.py
backend/core/scheduler/: kernel_scheduler.py  preemption_engine.py  queue_manager.py  replay_scheduler.py  resource_graph.py  scheduler_models.py  thermal_engine.py
backend/core/sdk/: __init__.py  base_plugin.py  capability_registry.py  dag_node_registry.py  plugin_loader.py  plugin_manifest.py
backend/core/services/: homomorphic_encryption.py  observability_service.py  rag_client.py  swarm_consensus_scorer.py  tracing.py  trust_scoring.py
backend/core/skill/: capability_registry.py  models.py  skill_registry.py  tool_registry.py
backend/core/state_machine/: kernel_state.py  state_transition_guard.py
backend/core/systems/: chaos_gameday.py  chaos_service.py  circuit_breaker.py  resource_governance.py
backend/core/tenant_isolation/: tenant.py  tenant_db.py  tenant_middleware.py
backend/core/trust/: behavioral_engine.py  handshake.py  trust_graph.py
backend/core/workers/: registration.py
backend/core/world_model/: schema.py  service.py
backend/hardware/: __init__.py  providers.py  reservations.py  scheduler.py  sla.py
backend/infra/deploy/: deploy_unified.py  deploy_worker.py
backend/infra/runpod/: deploy_runpod.py  restart_pod.py
backend/infra/supabase/: sb-sync.sh
backend/kernel/calibration/: engine.py
backend/kernel/coupling/: coordinator.py
backend/kernel/digital_twin/: runtime.py
backend/kernel/mesh/: adaptive.py
backend/ml/: __init__.py  registry.py
backend/ml/inference/: physics_api.py
backend/ml/training/: exporter.py  finetuner.py
backend/physics/: coupler.py
backend/physics/postprocessing/: service.py
backend/plugins/: __init__.py  base.py  registry.py
backend/plugins/ev_battery/: __init__.py  plugin.py
backend/plugins/market_trading/: __init__.py  plugin.py
backend/plugins/materials/: manifest.py  plugin.py
backend/plugins/physics/: __init__.py  manifest.json  manifest.py  plugin.py
backend/plugins/quantum/: manifest.py  plugin.py
backend/plugins/science/: manifest.py  plugin.py
backend/reasoning/: planner.py
backend/reasoning/proof_dag/: proof_node.py
backend/runtime/: autoscaler.py  chaos_monkey.py  contract.py  dag_executor.py  diff.py  diff_engine.py  execution_intelligence.py  gpu_worker.py  graph.py  job.py  kernel.py  kernel_boot.py  manifest.py  nodes.py  optimizer.py  physics_nodes.py  queue.py  replay.py  replay_diff.py  resilience.py  safe_exec.py  telemetry.py  time_utils.py  trace.py  worker.py
backend/runtime/a40/: simulation.py
backend/runtime/agent/: autonomous.py
backend/runtime/api/: reasoning_client.py
backend/runtime/cache/: __init__.py  simulation_cache.py  zfp.py
backend/runtime/cognition/: cognitive_router.py  execution_attention_graph.py  multi_res_cognition.py  novelty_scorer.py  physics_aware_cognition.py
backend/runtime/cpu_node/: orchestrator.py
backend/runtime/feedback/: brier_engine.py
backend/runtime/flywheel/: engine.py  hooks.py  leaderboard_scorer.py  scheduler.py
backend/runtime/gpu_worker/: executor.py  main.py  registration.py  (+2 more)
backend/scripts/: build.sh  docker-quickstart.sh  simhpc.sh
backend/sdk/: ebpf_enforcer.py  runtime_contract.py  wasm_runtime.py  world_service.py
backend/skills/: panic_button.py
backend/tests/: test_async_queue_integration.py  test_isolation_standalone.py
backend/tools/: bootstrap.py  check_api_purity.py  ci_gate.py  env_bootstrap.py  run_ci.py
backend/worker/: Dockerfile  entry.py  kernel.py  worker.py
(+889 files in other folders)
