[project]
name = "simhpc"
version = "2.7.2"
description = "SimHPC Unified Platform - Simulation backend for API + GPU workers + autoscaler"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "nexusbayarea", email = "nexusbayarea@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "redis>=4.5.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27.0",
    "supabase>=2.4.0",
    "postgrest>=0.16.0",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "websockets>=12.0",
    "tenacity>=8.2.3",
    "orjson>=3.10.1",
    "loguru>=0.7.2",
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
worker = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "fpdf2>=2.7.0",
    "openai>=1.0.0",
    "stripe>=5.0.0",
    "tiktoken>=0.5.0",
    "matplotlib>=3.7.0",
    "gunicorn>=21.0.0",
    "celery>=5.3.0",
]
gpu = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff==0.4.4",
    "mypy>=1.8",
]
ci = [
    "ruff==0.4.4",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E402"]

# FIX: single authoritative pytest config — pytest.ini has been deleted.
# Having both pytest.ini and [tool.pytest.ini_options] causes pytest to pick
# one silently; keeping only this section removes the ambiguity.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "worker*"]
exclude = ["tests*"]