[project]
name = "simhpc"
version = "3.5.1"
description = "SimHPC — GPU-Accelerated Finite Element Simulation Platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "neXusEvents", email = "engineering@simhpc.com" }]
license = { text = "Proprietary" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "supabase",
    "redis",
    "structlog",
    "tenacity",
    "python-dotenv",
    "circuitbreaker>=2.1.3",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-requests>=0.62b1",
    "stable-baselines3>=2.8.0",
    "gymnasium>=1.2.3",
    "numpy>=2.2.6",
    "torch>=2.11.0",
]

[project.optional-dependencies]
api = [
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "mypy",
    "uv>=0.4.0",
]
# Iceberg + Rust dependencies
iceberg = [
    "pyiceberg[sql,duckdb,pandas]>=0.7.0",
]
worker = [
    "celery",
    "gunicorn",
    "matplotlib",
    "pandas",
    "numpy>=2.2.6,<2.3",
    "reportlab",
    "pillow",
    "scipy>=1.12.0",
    "anthropic>=0.30.0",
]
# Full GPU + heavy deps
full = [
    "pyiceberg[sql,duckdb,pandas]>=0.7.0",
    "torch",
    "scipy>=1.12.0",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["backend*", "tools*"] } }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "app", "runtime", "tools", "worker"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
