[project]
name = "simhpc-backend"
version = "3.5.0"
dependencies = [
    "reportlab",
    "qrcode[pil]",
    "requests",
    "supervisor",
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic-settings"
]

[tool.setuptools]
# Only include directories that exist and contain __init__.py
packages = ["app", "packages", "autoscaler", "compiler", "infra", "tools", "worker"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
