[project]
name = "simhpc"
version = "3.5.0"
dependencies = [
    "reportlab",
    "qrcode[pil]",
    "requests",
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "numpy",
    "pillow",
    "python-dotenv",
    "annotated-doc",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
ignore = [
    "E402",   # module import not at top
    "B008",   # Depends() in default args - FastAPI pattern
    "B904",   # raise from err
    "E501",   # line too long
    "UP042",  # StrEnum
    "B007",   # loop var not used
    "TID252", # relative imports
    "I001",   # import sort
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"backend.app.api" = { msg = "API routes cannot be imported outside the API layer" }
"backend.app.api.routes" = { msg = "API routes cannot be imported outside the API layer" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
