[project]
name = "simhpc"
version = "3.5.0"
dependencies = [
    "reportlab",
    "qrcode[pil]",
    "requests",
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "numpy>=2.2.6,<2.3",
    "pillow",
    "python-dotenv",
    "annotated-doc",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "tools*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = [
    "E402",
    "B008",
    "B904",
    "E501",
    "UP042",
    "B007",
    "TID252",
    "I001",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"backend.app.api.routes" = { msg = "API routes cannot be imported outside the API layer" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "UP"]
ignore = ["E402", "B008", "B904", "E501", "UP042", "B007", "I001", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
